gitops/clusters/homelab/apps/public/nocobase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nocobase
  namespace: public
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nocobase
  template:
    metadata:
      labels:
        app: nocobase
    spec:
      automountServiceAccountToken: false
      containers:
        - name: nocobase
          image: nocobase/nocobase:latest-full
          ports:
            - containerPort: 13000
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 1000m
              memory: 1Gi
              ephemeral-storage: 2Gi
          volumeMounts:
            - name: storage
              mountPath: /app/nocobase/storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: nocobase-storage
