gitops/clusters/homelab/apps/public/nocobase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nocobase
  namespace: public
spec:
  selector:
    app: nocobase
  ports:
    - port: 80
      targetPort: 13000
