gitops/clusters/homelab/apps/public/nocobase/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nocobase
  namespace: public
spec:
  entryPoints:
    - public-web-secure
  routes:
    - match: Host(`nocobase.pavel-usanli.online`) || Host(`crmnoco-fwafz.deepcraftstudio.com`)
      kind: Rule
      services:
        - name: nocobase
          port: 80
  tls:
    certResolver: cloudflare
    domains:
      - main: nocobase.pavel-usanli.online
        sans:
          - crmnoco-fwafz.deepcraftstudio.com
